tests/errors/comprehensive/E5007_immutable_array.ez
/*
 * Error Test: E5007 - immutable-array
 * Expected: "cannot modify immutable array"
 */

do main() {
    const arr [int] = {1, 2, 3}
    arr[0] = 10  // Trying to modify const array
}
